--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -11,19 +11,28 @@
 * {
 	margin-bottom: 10px
 }
+.mm{
+color : yellow;
+}
+
+a:HOVER {
+	font-style: italic;
+	text-decoration: none;
+	color: red;
+}
 </style>
 </h:head>
-<body style="background-color: rgba(50, 100, 200, .2)">
+<body style="background-color: rgba(50, 100, 200, .5)">
 	<h:form>
-		<fieldset>
+		<fieldset style="border-color: red">
 			<legend style="text-align: center; font-size: 30px">Login
 				Page</legend>
 			<h:panelGrid columns="3"
-				style="background-color : rgba(0,200,215,5) ; margin-left : 640px">
+				style="background-color : rgba(0,100,215,.5) ; margin-left : 640px">
 				<h:outputLabel value="Username" for="un" style="color:yellow" />
 				<h:inputText value="#{loginbean.username}"
 					a:placeholder="Enter Username" id="un" required="true"
-					requiredMessage="Enter Username" />
+					requiredMessage="Enter Username" a:autofocus="true" />
 				<h:message for="un" style="color : red " />
 				<h:outputLabel value="Password" for="pw" style="color:yellow" />
 				<h:inputSecret value="#{loginbean.password}" id="pw"
@@ -34,25 +43,25 @@
 				<h:selectBooleanCheckbox id="cb" value="#{loginbean.checkBox}" />
 				<h:message for="cb" />
 				<h:commandButton action="#{loginbean.login}" value="Login"
-					style="color : white ; background-color : red" />
+					style="color : black ; background-color : white" />
 				<h:outputLabel value="" />
 				<h:outputLabel value="" />
 			</h:panelGrid>
 			<b
 				style="margin-left: 620px; color: blue; font-size: 20px; width: 500px">Do
-				You Want <a href="registered.xhtml">Sing Up</a> in my WebSite
+				You Want <a class ="mm" href="registered.xhtml">Sing Up</a> in my WebSite
 			</b> <br></br>
-			<hr size="5" noshade="noshade" />
-			<h:panelGroup style="margin-left : 640px">
-				<a href="https://www.google.com/">
+			<hr size="2" noshade="noshade" />
+			<h:panelGroup style="margin-left : 640px ">
+				<a  class ="mm" href="https://www.google.com/">
 				<span style="margin-left : 10px">Google</span>
 				</a>
-				<a href="https://www.facebook.com/"> 
+				<a class ="mm" href="https://www.facebook.com/"> 
 						<span style="margin-left : 10px">Facebook</span>
 				</a>
-				<a href="https://twitter.com"> <span style="margin-left : 10px">Twitter</span>
+				<a class ="mm" href="https://twitter.com"> <span style="margin-left : 10px">Twitter</span>
 				</a>
-				<a href="https://www.whatsapp.com/"> <span style="margin-left : 10px">Whatsapp</span>
+				<a class ="mm" href="https://www.whatsapp.com/"> <span style="margin-left : 10px">Whatsapp</span>
 				</a>
 			</h:panelGroup>
 		</fieldset>
