--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -28,7 +28,7 @@ a:HOVER {
 			<legend style="text-align: center; font-size: 30px">Login
 				Page</legend>
 			<h:panelGrid columns="3"
-				style="background-color : rgba(0,100,215,.5) ; margin-left : 640px">
+				style="background-color : rgba(0,100,215,.5) ; margin : auto">
 				<h:outputLabel value="Username" for="un" style="color:yellow" />
 				<h:inputText value="#{loginbean.username}"
 					a:placeholder="Enter Username" id="un" required="true"
