--- a/WebContent/registered.xhtml
+++ b/WebContent/registered.xhtml
@@ -8,7 +8,13 @@
 
 <h:head>
 <title>Registered Page</title>
+
 <style>
+.lable:hover{
+color : red;
+background-color : green
+
+}
 *{
 margin-bottom: 15px;
 }
@@ -17,18 +23,21 @@ color:blue;
 font-size: 50px;
 margin-left: 500px
 }
+h:hover{
+background-color : red
+}
 
 </style>
 </h:head> 
 <body style="background-color : rgba(50,100,200,.2) "  > 
 <div >
 <h:form >
-<fieldset>
-<legend><strong><font color="red">Registered Page</font></strong></legend>
+<fieldset style="border-color : red">
+<legend style="text-align: center ; font-size: 20px ">Registered Page</legend>
 <b>Welcome in  Registerd Page</b>
-<h:panelGrid columns="4" style="margin : auto " >
+<h:panelGrid columns="4" style="margin : auto ; background-color: rgba(0,100,215,.5) ; border : 1px solid red  " >
 <h:outputLabel value="* Username" style="color:yellow" />
-<h:inputText  value="#{registerBean.username}" a:placeholder="Enter Username" id="unr" required="true" requiredMessage="Enter Username"  />
+<h:inputText  value="#{registerBean.username}" a:placeholder="Enter Username" a:autofocus="true" id="unr" required="true" requiredMessage="Enter Username"  />
 <h:message for="unr" style="color : red"/>
 <h:outputLabel value="" />
 
@@ -43,7 +52,7 @@ margin-left: 500px
 <h:inputSecret value="#{registerBean.password}" a:placeholder="Enter password" id="pwr" required="true" requiredMessage="Enter Password"  >
 <f:attribute name="confirmPassword" value="#{confirmPassword}"/>
 <f:validator validatorId="passValidator"/>
-<f:validateLength minimum="5"></f:validateLength>
+
 
 </h:inputSecret>
 <h:message for="pwr" style="color : red"/>
@@ -71,7 +80,7 @@ margin-left: 500px
 
 <h:outputLabel value="* Gender" style="color:yellow"/>
 <h:selectOneRadio value="#{registerBean.gender}" id="rr" required="true" requiredMessage="Enter Gender">
-<f:selectItem itemValue="male" itemLabel="Male"/>
+<f:selectItem  itemValue="male" itemLabel="Male"/>
 <f:selectItem itemValue="female" itemLabel="Female"/>
 </h:selectOneRadio>
 <h:message for="rr" style="color:red ; " /> 
@@ -119,7 +128,7 @@ margin-left: 500px
 
 
 
-<h:outputLabel value="BithDate   :" style="color:yellow"/>
+<h:outputLabel value="BirthDate   :" style="color:yellow"/>
 <h:selectOneMenu value="#{registerBean.year}" id="year"  >
 <f:selectItems value="#{registerBean.yearVlaue}"/>
 </h:selectOneMenu>
@@ -130,7 +139,7 @@ margin-left: 500px
 <f:selectItems value="#{registerBean.dayValue}"/>
 </h:selectOneMenu>
 
-<h:commandButton action="#{registerBean.doRegister()}" value="Rigister" />
+<h:commandButton class="lable" action="#{registerBean.doRegister()}" value="Rigister" />
 
 </h:panelGrid>
 </fieldset>
