second modifyied login

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -11,8 +11,9 @@
 * {
 	margin-bottom: 10px
 }
-.mm{
-color : yellow;
+
+.mm {
+	color: yellow;
 }
 
 a:HOVER {
@@ -49,19 +50,26 @@ a:HOVER {
 			</h:panelGrid>
 			<b
 				style="margin-left: 620px; color: blue; font-size: 20px; width: 500px">Do
-				You Want <a class ="mm" href="registered.xhtml">Sing Up</a> in my WebSite
+				You Want <a class="mm" href="registered.xhtml">Sing Up</a> in my
+				WebSite
 			</b> <br></br>
 			<hr size="2" noshade="noshade" />
 			<h:panelGroup style="margin-left : 640px ">
-				<a  class ="mm" href="https://www.google.com/">
-				<span style="margin-left : 10px">Google</span>
+				<a class="mm" href="https://www.google.com/"> <h:graphicImage
+						library="images" name="google.jpg" title="google"
+						alt="google" width="70" height="35" />
 				</a>
-				<a class ="mm" href="https://www.facebook.com/"> 
-						<span style="margin-left : 10px">Facebook</span>
+				<a class="mm" href="https://www.facebook.com/"> <h:graphicImage
+						library="images" name="face.jpg" title="facebook"
+						alt="facebook" width="70" height="35" />
 				</a>
-				<a class ="mm" href="https://twitter.com"> <span style="margin-left : 10px">Twitter</span>
+				<a class="mm" href="https://twitter.com"> <h:graphicImage
+						library="images" name="Twitter-icon.png" title="twitter"
+						alt="twitter" width="70" height="35" />
 				</a>
-				<a class ="mm" href="https://www.whatsapp.com/"> <span style="margin-left : 10px">Whatsapp</span>
+				<a class="mm" href="https://www.whatsapp.com/"> <h:graphicImage
+						library="images" name="whatsapp-300x300.jpg" title="whatsapp"
+						alt="whatsapp" width="70" height="35" />
 				</a>
 			</h:panelGroup>
 		</fieldset>
