--- a/WebContent/mohphoto.xhtml
+++ b/WebContent/mohphoto.xhtml
@@ -11,7 +11,7 @@
 <fieldset>
 <legend>My Photo</legend>
 <h:panelGrid columns="3">
-<h:graphicImage library="image" name="IMAG1120.jpg" title="mohameds Photo" alt="moh. photo" width="150" height="150"/>
+<h:graphicImage library="images" name="face.jpg" title="mohameds Photo" alt="moh. photo" width="150" height="150"/>
 <h:graphicImage library="image" name="IMAG1121.jpg" title="mohameds Photo" alt="moh. photo" width="150" height="150"/>
 <h:graphicImage library="image" name="IMAG1123.jpg" title="mohameds Photo" alt="moh. photo" width="150" height="150"/>
 <h:graphicImage library="image" name="IMAG1128.jpg" title="mohameds Photo" alt="moh. photo" width="150" height="150"/>
